# ppcg-forked

./: .gitignore  .gitmodules  LICENSE_ADDITIONAL  Makefile.am  README  autogen.sh  automate.sh  build-ppcg-with-llvm.sh  cleanup.sh  configure.ac
doc/helper-docs/: SETUP-PPCG-DETAILS.md  SUPERFAST-PLAY-WITH-PPCG.md
doc/helper-docs/RUEDA/: RUEDA-GIT-BRANCH-PLANNING.md  RUEDA-SCAFFOLD-EXPLAINED.md  RUEDA-STYLEGUIDE.md
doc/helper-docs/git-docs/: 1.SYNC-WITH-MASTER-UPSTREAM.md  2.ADD_CJSON_OSL_JSON_AS_GIT_SUBMODULE.md
rueda/: Makefile.am  main.cpp  utility.cpp
rueda/include/librueda/: rueda.hpp
rueda/include/librueda/fpga/: rueda_fpga.h  rueda_fpga_options.h
rueda/include/librueda/gpu/: rueda_gpu.h  rueda_gpu_options.h
rueda/lib/: rueda.cpp  rueda_options.c  rueda_options.h
rueda/lib/fpga/: rueda_fpga.c  rueda_fpga_options.c
rueda/lib/gpu/: rueda_gpu.c  rueda_gpu_logger.cpp  rueda_gpu_options.c
